v19.1/classes/GC.Spread.Sheets.Themes.md
# Class: Themes

[Spread](../modules/GC.Spread.md).[Sheets](../modules/GC.Spread.Sheets.md).Themes

## Table of contents

### Constructors

- [constructor](GC.Spread.Sheets.Themes.md#constructor)

### Properties

- [Apex](GC.Spread.Sheets.Themes.md#apex)
- [Aspect](GC.Spread.Sheets.Themes.md#aspect)
- [Civic](GC.Spread.Sheets.Themes.md#civic)
- [Concourse](GC.Spread.Sheets.Themes.md#concourse)
- [Default](GC.Spread.Sheets.Themes.md#default)
- [Equity](GC.Spread.Sheets.Themes.md#equity)
- [Flow](GC.Spread.Sheets.Themes.md#flow)
- [Foundry](GC.Spread.Sheets.Themes.md#foundry)
- [Median](GC.Spread.Sheets.Themes.md#median)
- [Metro](GC.Spread.Sheets.Themes.md#metro)
- [Module](GC.Spread.Sheets.Themes.md#module)
- [Office](GC.Spread.Sheets.Themes.md#office)
- [Office2007](GC.Spread.Sheets.Themes.md#office2007)
- [Opulent](GC.Spread.Sheets.Themes.md#opulent)
- [Oriel](GC.Spread.Sheets.Themes.md#oriel)
- [Origin](GC.Spread.Sheets.Themes.md#origin)
- [Paper](GC.Spread.Sheets.Themes.md#paper)
- [Solstice](GC.Spread.Sheets.Themes.md#solstice)
- [Technic](GC.Spread.Sheets.Themes.md#technic)
- [Trek](GC.Spread.Sheets.Themes.md#trek)
- [Urban](GC.Spread.Sheets.Themes.md#urban)
- [Verve](GC.Spread.Sheets.Themes.md#verve)

## Constructors

### <a id="constructor" name="constructor"></a> constructor

• **new Themes**()

表示所有内置主题。

## Properties

### <a id="apex" name="apex"></a> Apex

▪ `Static` **Apex**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Apex 主题。

___

### <a id="aspect" name="aspect"></a> Aspect

▪ `Static` **Aspect**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Aspect 主题。

___

### <a id="civic" name="civic"></a> Civic

▪ `Static` **Civic**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Civic 主题。

___

### <a id="concourse" name="concourse"></a> Concourse

▪ `Static` **Concourse**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Concourse 主题。

___

### <a id="default" name="default"></a> Default

▪ `Static` **Default**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Default 主题。

___

### <a id="equity" name="equity"></a> Equity

▪ `Static` **Equity**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Equity 主题。

___

### <a id="flow" name="flow"></a> Flow

▪ `Static` **Flow**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Flow 主题。

___

### <a id="foundry" name="foundry"></a> Foundry

▪ `Static` **Foundry**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Foundry 主题。

___

### <a id="median" name="median"></a> Median

▪ `Static` **Median**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Median 主题。

___

### <a id="metro" name="metro"></a> Metro

▪ `Static` **Metro**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Metro 主题。

___

### <a id="module" name="module"></a> Module

▪ `Static` **Module**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Module 主题。

___

### <a id="office" name="office"></a> Office

▪ `Static` **Office**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Office 主题。

___

### <a id="office2007" name="office2007"></a> Office2007

▪ `Static` **Office2007**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Office 2007 主题。

___

### <a id="opulent" name="opulent"></a> Opulent

▪ `Static` **Opulent**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Opulent 主题。

___

### <a id="oriel" name="oriel"></a> Oriel

▪ `Static` **Oriel**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Oriel 主题。

___

### <a id="origin" name="origin"></a> Origin

▪ `Static` **Origin**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Origin 主题。

___

### <a id="paper" name="paper"></a> Paper

▪ `Static` **Paper**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Paper 主题。

___

### <a id="solstice" name="solstice"></a> Solstice

▪ `Static` **Solstice**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Solstice 主题。

___

### <a id="technic" name="technic"></a> Technic

▪ `Static` **Technic**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Technic 主题。

___

### <a id="trek" name="trek"></a> Trek

▪ `Static` **Trek**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Trek 主题。

___

### <a id="urban" name="urban"></a> Urban

▪ `Static` **Urban**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Urban 主题。

___

### <a id="verve" name="verve"></a> Verve

▪ `Static` **Verve**: [`Theme`](GC.Spread.Sheets.Theme.md)

表示 Verve 主题。
